<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:title="@string/bbc" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/aljezra"
            android:title="@string/aljezra" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/cnn"
            android:title="@string/cnn" />
        <item
            android:id="@+id/FoxNews"
            android:icon="@drawable/fox"
            android:title="@string/foxnews"/>
        <item
            android:id="@+id/sky"
            android:icon="@drawable/sky"
            android:title="@string/sky_news"/>
    </group>
    <item android:title="Up Comming">
        <menu>
            <item

                android:id="@+id/ny"
                android:icon="@drawable/ny"
                android:title="@string/new_york_news" />


        </menu>


    </item>


</menu>