<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.deepanshu.news.ui.home.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.deepanshu.news.ui.gallery.GalleryFragment"
        android:label="@string/aljezra"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.deepanshu.news.ui.slideshow.SlideshowFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/FoxNews"
        android:name="com.deepanshu.news.Fragments.FoxNewsFragments"
        android:label="@string/fox"
        tools:layout="@layout/fragment_fox_news_fragments" />
    <fragment
        android:id="@+id/sky"
        android:name="com.deepanshu.news.Fragments.SkyNews"
        android:label="@string/sky"
        tools:layout="@layout/fragment_sky_news" />
</navigation>